[package]
name = "jlot"
version = "0.4.2"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Command-line tool for JSON-RPC 2.0 over JSON Lines over TCP"
homepage = "https://github.com/sile/jlot"
repository = "https://github.com/sile/jlot"
readme = "README.md"

[dependencies]
noargs = "0.4.1"
nojson = "0.3.6"
orfail = "1.1.0"
