[package]
name = "jlot"
version = "0.5.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Command-line tool for JSON-RPC 2.0 over JSON Lines over TCP"
homepage = "https://github.com/sile/jlot"
repository = "https://github.com/sile/jlot"
readme = "README.md"

[dependencies]
mio = { version = "1.1.1", default-features=false, features = ["os-poll", "net"] }
noargs = "0.4.1"
nojson = "0.3.6"
orfail = "2.0.0"
